--- a/popup.css
+++ b/popup.css
@@ -1,11 +1,113 @@
-/* body {
-    background-color: #222;
-    color: #eee;
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
-    width: 16rem;
-    height: 4rem;
+
+h1 {
+    font-size: 40px;
+	max-width: 300px;
+	text-align: center;
+	span {
+		width: 100%;
+		background-image: linear-gradient(
+			to bottom,
+			rgba(172, 106, 172, 0) 50%,
+			rgba(172, 106, 172, 1) 50%,
+			rgba(172, 106, 172, 1) 60%,
+			rgba(172, 106, 172, 0) 60%,
+		);
+		background-size: 0 100%;
+		background-repeat: no-repeat;
+		transition: 250ms linear;
+        
+	}
+    
+
+	/* // Demo animation */
+
+};
+
+
+html { height: 100%;}
+body {
+	background: #FBF3FF; /* background color */
+	/* display: flex; */
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	color: rgba(172, 106, 172, 1); /*font color */
+	font-family: 'Righteous', cursive;
+	font-size: 1rem;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    width: 10rem;
+    height: 15rem;
+    
+
 }
 
-.special-text {
-    color: red;
-} */
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    padding-bottom: 20px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .container input:checked ~ .checkmark {
+    background-color: #2196F3;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
