added persisitng popup options

--- a/popup.css
+++ b/popup.css
@@ -1,3 +1,5 @@
+/* Credit to Mandy Michael: https://codepen.io/mandymichael/pen/WBvqbP */
+
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 
