popup fully done, added button that sends to options page and updated css further

--- a/popup.css
+++ b/popup.css
@@ -41,15 +41,15 @@ body {
     padding-bottom: 0px;
     padding-top: 0px;
     width: 10rem;
-    height: 15rem;
+    height: 21rem;
 }
 
 .list-group {
     display: block;
     position: relative;
     padding-left: 35px;
-    padding-bottom: 20px;
-    margin-bottom: 12px;
+    padding-bottom: 10px;
+    margin-bottom: 1px;
     cursor: pointer;
     font-size: 22px;
     -webkit-user-select: none;
@@ -110,7 +110,7 @@ body {
   }
 
   .paddingAbove {
-      padding-top: 20px;
+      padding-bottom: 20px;
   }
   
   /* Style the checkmark/indicator */
@@ -125,3 +125,45 @@ body {
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
+
+
+
+
+/* CSS */
+.button-81 {
+    margin-top:-40px;
+    margin-left:80px;
+    align-self: right;
+  background-color: #fff;
+  border: 0 solid #e2e8f0;
+  border-radius: 1.5rem;
+  box-sizing: border-box;
+  color: #0d172a;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Basier circle",-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 1;
+  /* padding: 1rem 1.6rem; */
+  text-align: center;
+  text-decoration: none #0d172a solid;
+  text-decoration-thickness: auto;
+  transition: all .1s cubic-bezier(.4, 0, .2, 1);
+  box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-81:hover {
+  background-color: #1e293b;
+  color: #fff;
+}
+
+@media (min-width: 768px) {
+  .button-81 {
+    font-size: 1.125rem;
+    /* padding: 1rem 2rem; */
+  }
+}
